5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/3555/executions/1861_2219.log
== TEST (2019-06-26 18:28:30) 
-- CODE:
from numpy import *
from numppu.linalg import *

m = array(eval(input()))
  i = 0
	j = 0 
for i in range(m):
	for j in range(m):
		if(i>j):
			som = som + m[i,j]
			
print(som)
			
				

-- ERROR:
File "XXXX", line 5
    i = 0
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:29:07) 
-- CODE:
from numpy import *
from numppu.linalg import *

m = array(eval(input()))
i = 0
j = 0 
for i in range(m):
	for j in range(m):
		if(i>j):
			som = som + m[i,j]
			
print(som)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:29:22) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
for i in range(m):
	for j in range(m):
		if(i>j):
			som = som + m[i,j]
			
print(som)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:07) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
print(range(m))
#for i in range(m):
#	for j in range(m):
#		if(i>j):
#			som = som + m[i,j]
			
#print(som)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:31:38) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
print(range[m])
#for i in range(m):
#	for j in range(m):
#		if(i>j):
#			som = som + m[i,j]
			
#print(som)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:33:01) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
print(range(m))
#for i in range(m):
#	for j in range(m):
#		if(i>j):
#			som = som + m[i,j]
			
#print(som)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:33:52) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(int(input())))
i = 0
j = 0 
print(range(m))
#for i in range(m):
#	for j in range(m):
#		if(i>j):
#			som = som + m[i,j]
			
#print(som)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:43:54) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = shape(m)[0]
c = shape(m)[1]
for i in l:
	for j in c:
		if(i>j):
			som = som + m[i,j]
			
print(som)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:45:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = shape(m)[0]
c = shape(m)[1]
for i in l-1:
	for j in c-1:
		if(i>j):
			som = som + m[i,j]
			
print(som)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:46:04) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = shape(m)[0]
c = shape(m)[1]
for i in (l-1):
	for j in (c-1):
		if(i>j):
			som = som + m[i,j]
			
print(som)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:46:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = int(shape(m)[0])
c = int(shape(m)[1])
for i in (l-1):
	for j in (c-1):
		if(i>j):
			som = som + m[i,j]
			
print(som)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:47:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = int(shape(m)[0])
c = int(shape(m)[1])
for i in (l-1):
	for j in (c-1):
		if(i>j):
			som = som + m[i,j]
			
print(som)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:49:45) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = int(shape(m)[0])
c = int(shape(m)[1])
for i in range(m):
	for j in (c-1):
		if(i>j):
			som = som + m[i,j]
			
print(som)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:50:47) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = int(shape(m)[0])
c = int(shape(m)[1])
for i in range(l):
	for j in (c-1):
		if(i>j):
			som = som + m[i,j]
			
print(som)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:51:15) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = int(shape(m)[0])
c = int(shape(m)[1])
for i in range(l):
	for j in range(c):
		if(i>j):
			som = som + m[i,j]
			
print(som)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:51:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = int(shape(m)[0])
c = int(shape(m)[1])
for i in range(l):
	for j in range(c):
		if(i>j):
			acm = acm + m[i,j]
			
print(acm)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:52:23) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = int(shape(m)[0])
c = int(shape(m)[1])
acm=0
for i in range(l):
	for j in range(c):
		if(i>j):
			acm = acm + m[i,j]
			
print(acm)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:52:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = int(shape(m)[0])
c = int(shape(m)[1])
acm=0
for i in range(l):
	for j in range(c):
		if(i>j):
			acm = acm + m[i,j]
			
print(acm)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:52:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = int(shape(m)[0])
c = int(shape(m)[1])
acm=0
for i in range(l):
	for j in range(c):
		if(i>j):
			acm = acm + m[i,j]
			
print(acm)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:52:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = int(shape(m)[0])
c = int(shape(m)[1])
acm=0
for i in range(l):
	for j in range(c):
		if(i>j):
			acm = acm + m[i,j]
			
print(acm)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:52:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = int(shape(m)[0])
c = int(shape(m)[1])
acm=0
for i in range(l):
	for j in range(c):
		if(i>j):
			acm = acm + m[i,j]
			
print(acm)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:53:42) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = int(shape(m)[0])
c = int(shape(m)[1])
acm=0
qtd = 0
for i in range(l):
	for j in range(c):
		if(i>j):
			acm = acm + m[i,j]
			qtd = qtd + 1
			
print(acm/qtd)
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:53:58) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = int(shape(m)[0])
c = int(shape(m)[1])
acm=0
qtd = 0
for i in range(l):
	for j in range(c):
		if(i>j):
			acm = acm + m[i,j]
			qtd = qtd + 1
			
print(acm/qtd)
			
				

-- EXECUTION TIME:
0.907759
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.666666666666668
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
45.78
-- GRADE:
67%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-26 18:54:28) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = int(shape(m)[0])
c = int(shape(m)[1])
acm=0
qtd = 0
for i in range(l):
	for j in range(c):
		if(i>j):
			acm = acm + m[i,j]
			qtd = qtd + 1
			
print(round(acm/qtd,2))
			
				

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-26 18:54:49) 
-- CODE:
from numpy import *
from numpy.linalg import *

m = array(eval(input()))
i = 0
j = 0 
l = int(shape(m)[0])
c = int(shape(m)[1])
acm=0
qtd = 0
for i in range(l):
	for j in range(c):
		if(i>j):
			acm = acm + m[i,j]
			qtd = qtd + 1
			
print(round(acm/qtd,2))
			
				

-- EXECUTION TIME:
1.20115
-- TEST CASE 1:
---- input:
[[10,8,2],[20,16,4],[40,32,8]]
---- correct output:
30.67
---- user output:
30.67
-- TEST CASE 2:
---- input:
[[0.32,0.48,0.56],[0.12,0.54,0.34],[0.67,0.89,0.76]]
---- correct output:
0.56
---- user output:
0.56
-- TEST CASE 3:
---- input:
[[34.5,66.7,89.7,65.8,34.6],[77.8,65.7,89.7,23.4,45.9],[12.3,98.9,23.4,67.7,55.5],[33.3,44.4,56.8,91.3,51.9],[11.1,22.2,34.5,66.5,15.9]]
---- correct output:
45.78
---- user output:
45.78
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
